--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <link href="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
 
-<h1>FUCK this</h1>
+<html>
+    <body>
+        <h1>Hello World</h1>
+    </body>
+
+ 
+</html>
