--- a/HTML Copy.html
+++ b/HTML Copy.html
@@ -7,7 +7,7 @@
    <!--font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="./quotemachine.css">
+    <link rel="stylesheet" type="text/css" href="./randome.css">
    <!--react-->
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
@@ -18,7 +18,7 @@
 <body>
     <div id="" ></div>
     <!--use babel-->
-    <script type="text/babel" src="./quotemachine.js"></script>
+    <script type="text/babel" src="./randome.js"></script>
     <!--use babel-->
 </body>
 </html>
